--- a/pom.xml
+++ b/pom.xml
@@ -178,11 +178,11 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>4.0.2.RELEASE</version>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.11</version>
-		</dependency> -->
+			<version>5.1.9</version>
+		</dependency>
 		
 		<!-- Test -->
 		<dependency>
