--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>csm.emr.spring</groupId>
+	<groupId>com.emr.spring</groupId>
 	<artifactId>emr-web</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
@@ -181,7 +181,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.9</version>
+			<version>5.1.46</version>
 		</dependency>
 		
 		<!-- Test -->
